--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -4,16 +4,19 @@
         @for (vehicle of vehicleStatusOverview; track $index) {
         <div class="col-12 md:col-6 lg:col-3">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
+                    <div class="flex justify-content-between">
                         <div class="mb-3" [ngClass]="vehicle.textColorClass + ' text-5xl'">{{ vehicle.count }}</div>
+                        <div class="flex align-items-center justify-content-center"
+                            [ngClass]="vehicle.bgColorClass + ' border-round'" style="width:5rem;height:5rem">
+                            <i class="pi pi-car" [ngClass]="vehicle.textColorClass + ' text-5xl'"></i>
+                        </div>
+                    </div>
+                    <div class="flex justify-content-between mt-2">
                         <span class="block text-2xl text-500 font-bold">{{ vehicle.label }}</span>
+                        <div class="flex align-items-center justify-content-center">
+                            <i class="pi pi-info-circle font-bold text-xl text-primary-500 cursor-pointer"></i>
+                        </div>
                     </div>
-                    <div class="flex align-items-center justify-content-center"
-                        [ngClass]="vehicle.bgColorClass + ' border-round'" style="width:5rem;height:5rem">
-                        <i class="pi pi-car" [ngClass]="vehicle.textColorClass + ' text-5xl'"></i>
-                    </div>
-                </div>
             </div>
         </div>
         }
@@ -29,50 +32,41 @@
                   <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints || 0 }}</span>
                 </ng-template>
                 <div class="grid">
-                  <div *ngFor="let stat of complaintStats" class="col-12 md:col-6 lg:col-6">
-                    <div class="surface-300 shadow-2 p-3 border-round">
-                      <div class="flex justify-content-between">
-                        <div>
-                          <div class="mb-3" [ngClass]="'text-' + stat.colorClass + '-500 text-5xl'">{{ stat.count }}</div>
-                          <span  class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
+                    <div *ngFor="let stat of complaintStats" class="col-12 md:col-6 lg:col-6">
+                        <div class="surface-300 shadow-2 p-3 border-round">
+                            <div class="flex justify-content-between">
+                                <div>
+                                    <div class="mb-3" [ngClass]="'text-' + stat.colorClass + '-500 text-5xl'">{{ stat.count }}</div>
+                                    <span class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
+                                </div>
+                                <div class="flex align-items-center justify-content-center"
+                                    [ngClass]="'bg-' + stat.colorClass + '-100 border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi" [ngClass]="stat.icon + ' text-' + stat.colorClass + '-500 text-5xl'"></i>
+                                </div>
+                            </div>
+                            <div class="flex justify-content-between mt-4 align-items-center">
+                                <div class="w-full border-round" [ngClass]="'bg-' + stat.colorClass + '-500'" style="height: 5px;">
+                                </div>
+                                <i class="pi pi-info-circle  ml-4 cursor-pointer font-bold text-xl text-primary-500"></i>
+                            </div>
                         </div>
-                        <div class="flex align-items-center justify-content-center"
-                             [ngClass]="'bg-' + stat.colorClass + '-100 border-round'" style="width:5rem;height:5rem">
-                          <i class="pi" [ngClass]="stat.icon + ' text-' + stat.colorClass + '-500 text-5xl'"></i>
-                        </div>
-                      </div>
-                      <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                        <div [ngClass]="'bg-' + stat.colorClass + '-500 h-full'" 
-                             [style.width.%]="'100%'" style="border-radius: 4px;"></div>
-                      </div>
                     </div>
-                  </div>
                 </div>
               </p-panel>
               
         </div>
         <div class="col-12 md:col-6 lg:col-2">
-            <!-- <div class="p-3 border-round bg-red-500">
-                <div class="flex justify-content-between">
-                    <div class="flex align-items-center justify-content-center" [ngClass]="' border-circle'"
-                        style="width:14rem;height:16rem">
-                        <span  [ngClass]="'text-white' + ' text-7xl font-bold'">SOS</span>
-                    </div>
-                    <div class="flex align-items-center justify-content-center" [ngClass]="'bg-white' + ' border-round'"
-                        style="width:14rem;height:16rem">
-                        <span   [ngClass]="'text-red-500 font-bold' + ' text-7xl'">1000</span>
-                    </div>
-                </div>
-            </div> -->
-
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
                     <span class="text-2xl font-bold">SOS <span class="text-color-secondary ">( Today )</span></span>
                 </ng-template>
-                <div class="p-3 border-round bg-red-500">
+                <div class="p-1 border-round bg-red-500">
                     <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
                         <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
                     </div>   
+                </div>
+                <div class="text-right">
+                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
                 </div>
             </p-panel>
         </div>
@@ -82,10 +76,13 @@
                 <ng-template pTemplate="header">
                     <span class="text-2xl font-bold" >Over Speed <span class="text-color-secondary">( Today )</span></span>
                 </ng-template>
-                <div class="p-3 border-round bg-yellow-500">
+                <div class="p-1 border-round bg-yellow-500">
                     <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
                         <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
                     </div>   
+                </div>
+                <div class="text-right">
+                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
                 </div>
                 
             </p-panel>
@@ -95,10 +92,13 @@
                 <ng-template pTemplate="header">
                     <span class="text-2xl font-bold" >Alert <span class="text-color-secondary ">( Today )</span></span>
                 </ng-template>
-                <div class="p-3 border-round bg-yellow-500">
+                <div class="p-1 border-round bg-yellow-500">
                     <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
                         <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
                     </div>   
+                </div>
+                <div class="text-right">
+                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
                 </div>
                 
             </p-panel>
@@ -126,20 +126,12 @@
                         </div>
                     </div>
                     <div class="col-12 md:col-6 lg:col-6">
-                        <div style="height: 480px;" class="p-5 overflow-auto">
+                        <div style="height: 558px;" class="p-5 overflow-auto">
                             @for (vehicle of vehicleInstallationTypes; track $index) {
                                 <div class="col-12 md:col-12 lg:col-12">
-                                    <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between">
-                                        <!-- Left side: Progress bar -->
-                                        <div class="mr-3" style="width: 10px; height: 50px; border-radius: 4px; background-color: #e0e0e0;">
-                                            <div class="bg-green-500" style="width: 100%; height: 100%; border-radius: 4px;"></div> <!-- Adjust height for progress -->
-                                        </div>
-                                    
-                                        <!-- Right side: Title and count -->
-                                        <div class="flex flex-column justify-content-center align-items-end p-3">
-                                            <span class="text-lg mb-2">{{vehicle.deviceCount}} / {{vehicle.totalCount}}</span>
+                                    <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between p-4">
                                             <span class="text-xl font-bold">{{vehicle.categoryName}}</span>
-                                        </div>
+                                            <span class="text-lg mb-2">{{vehicle.deviceCount}} / {{vehicle.totalCount}}</span>
                                     </div>
                                 </div>
                                 
@@ -169,6 +161,9 @@
                                         </div>
                                 </div>
                             }
+                            <div class="text-right">
+                                <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
+                            </div>
                     </p-panel>
                 </div>
 
@@ -190,6 +185,9 @@
                                         </div>
                                 </div>
                             }
+                            <div class="text-right">
+                                <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
+                            </div>
                     </p-panel>
                 </div>
 
@@ -212,6 +210,9 @@
                                         </div>
                                 </div>
                             }
+                            <div class="text-right">
+                                <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
+                            </div>
                     </p-panel>
                 </div>
                 
@@ -219,7 +220,7 @@
                     <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
                             <div class="surface-card shadow-2 border-round">
-                                <div style="height: 354px;" leaflet (leafletMapReady)="onMapReady($event)"
+                                <div style="height: 400px;" leaflet (leafletMapReady)="onMapReady($event)"
                                     [leafletOptions]="leafletOptions">
                                 </div>
                             </div>
