--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -187,7 +187,10 @@
                             <td>
                                 @if(col.hyperlink) {
                                     <span (click)="col?.hyperlink ? showOverlay(col,item, $event, op) : null" class="underline font-bold text-green-500 cursor-pointer" [ngClass]="{'text-green-500' : item['activationStatus'], 'text-red-500' : !item['activationStatus']}">{{item[col.field]}}</span>
-                                } @else {
+                                } @else if(col.field === 'downloadCertificate') {
+                                    <p-button (onClick)="downloadCertifcate()" icon="pi pi-download" [rounded]="true" [text]="true" />
+                                }
+                                 @else {
                                     {{ item[col.field] || '-' }}
                                 }
 
