--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -66,7 +66,7 @@
                                         [styleClass]="isPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
                                 </p-iconField>
                                 <p-iconField iconPosition="right">
-                                    <input id="Password" placeholder="Re-type Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.reTypedPassword"
+                                    <input id="retype-Password" placeholder="Re-type Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.reTypedPassword"
                                         [type]="isRetypePasswordToggled ? 'text' : 'password'" pInputText (copy)="disableEvent($event)"
                                         (paste)="disableEvent($event)" (cut)="disableEvent($event)">
                                     <p-inputIcon (click)="toggleRetypePassword()"
