--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -118,7 +118,7 @@
                                                 [data]="selectedOverlayObject"
                                                 [actions]="selectedColumn === 'vehicleNo' ? [] : [{label:'Send Otp',key:'send_otp'}]"
                                                 [fields]="selectedColumn === 'vehicleNo' ? vehicleOverlayFields : userOverlayFields"
-                                                (emitSeelctedAction)="handleSelectedOverlayAction($event)"
+                                                (emitSeelctedAction)="handleSelectedOverlayAction($event,item,selectedOverlayObject)"
                                                 ></app-generic-overlay>
                                             }
 
