--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -116,7 +116,7 @@
                                                 *ngIf="selectedOverlayObject"
                                                 [title]="selectedColumn === 'vehicleNo' ? 'Vehicle Details' : 'User Details'"
                                                 [data]="selectedOverlayObject"
-                                                [actions]="selectedColumn === 'vehicleNo' ? [] : [{label:'Send Otp',key:'send_otp'}]"
+                                                [actions]="selectedColumn === 'vehicleNo' ? [] : item.status === 'Kyc Pending' ? [{label:'Send Otp',key:'send_otp'}] : []"
                                                 [fields]="selectedColumn === 'vehicleNo' ? vehicleOverlayFields : userOverlayFields"
                                                 (emitSeelctedAction)="handleSelectedOverlayAction($event,item,selectedOverlayObject)"
                                                 ></app-generic-overlay>
