--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -144,7 +144,7 @@
                                 <div class="col-12 md:col-12 lg:col-12">
                                     <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between p-4">
                                             <span class="text-xl font-bold">{{vehicle.categoryName}}</span>
-                                            <span class="text-lg mb-2">{{vehicle.deviceCount}} / {{vehicle.totalCount}}</span>
+                                            <span class="text-lg mb-2">{{vehicle?.deviceCount}} / {{!vehicle?.totalCount ? vehicle?.deviceCount : vehicle?.totalCount}}</span>
                                     </div>
                                 </div>
                                 
