--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 @import 'leaflet/dist/leaflet.css';
+@import 'leaflet.markercluster/dist/MarkerCluster.Default.css';
+@import 'leaflet.markercluster/dist/MarkerCluster.css';
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 .p-shake {
