--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -4,7 +4,7 @@
    (transferInventory)="onTransferInventory($event)" (activate)="onActivate($event)" (fitment)="onFitment($event)" (emitOverlayAction)="handleOverlayAction($event)" />
 
 
-<app-generic-dialog [customSaveLabel]="customSaveLabel" [stepFormFields]="stepFormFields" 
+<app-generic-dialog [customSaveLabel]="customSaveLabel" [stepFormFields]="stepFormFields" [disableStepperNextBtn]="disableStepperNextBtn"
    [isStepForm]="accesStepForm" [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
     [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
     [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
